--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,17 +42,21 @@ jobs:
           php artisan route:cache
           php artisan view:cache
 
-      # 7. Deploy Laravel core (exclude public)
-      - name: Deploy Laravel core to FTP
-        uses: SamKirkland/FTP-Deploy-Action@v4.3.0
+      # 7. Deploy Laravel project incrementally via SFTP
+      - name: Deploy only changed files via SFTP
+        uses: atymic/sftp-deploy@v1.0.6
         with:
           server: ${{ secrets.FTP_SERVER }}
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
+          port: 22
           local-dir: ./
-          server-dir: /htdocs/laravel/
+          remote-dir: /htdocs/laravel/
+          delete: false       # keep existing files
           exclude: |
             public/**
             .git/**
             .github/**
             node_modules/**
+            tests/**
+
